--- a/REnvironmentControlLibrary/Views/REnvironmentPanel.xaml
+++ b/REnvironmentControlLibrary/Views/REnvironmentPanel.xaml
@@ -71,8 +71,22 @@
             Grid.Column="0"
             Background="Black"
             Foreground="Lime"
-            ItemTemplate="{StaticResource MessageTemplate}"
-            ItemsSource="{Binding Messages}" />
+            ItemsSource="{Binding Messages}">
+
+            <ListView.View>
+
+                <GridView>
+
+                    <GridViewColumn
+                        Width="300"
+                        CellTemplate="{StaticResource MessageTemplate}"
+                        Header="Messages" />
+
+                </GridView>
+
+            </ListView.View>
+
+        </ListView>
 
     </Grid>
 
